--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">prototipo4</string>
+    <string name="app_name">PlatoPaUsted</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
@@ -14,6 +14,7 @@
     <string-array name="spinner_gender">
         <item>Hombre</item>
         <item>Mujer</item>
+        <item>Otros</item>
         <item>Prefiero no decirlo</item>
     </string-array>
 
